Converted Statement DTO classes into builders